--- a/EasyUpdateApplicationLibrary/build.gradle
+++ b/EasyUpdateApplicationLibrary/build.gradle
@@ -26,6 +26,7 @@ android
 
 dependencies
 {
+	compile 'com.android.support:recyclerview-v7:+'
 	compile 'com.android.support:appcompat-v7:+'
 	compile 'com.android.support:support-annotations:+'
 	
